# localstack-extensions

./: .gitignore  CODEOWNERS  README.md  flake.nix
aws-proxy/: .gitignore  AGENTS.md  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.cfg
aws-proxy/aws_proxy/: __init__.py  config.py
aws-proxy/aws_proxy/client/: auth_proxy.py  cli.py  http2_server.py  replicate.py  service_states.py  utils.py
aws-proxy/aws_proxy/frontend/: package.json
aws-proxy/aws_proxy/server/: aws_request_forwarder.py  extension.py  request_handler.py  resource_replicator.py
aws-proxy/aws_proxy/shared/: constants.py  models.py  utils.py
aws-proxy/example/: Makefile  lambda.py  proxy_config.yml
aws-proxy/tests/: conftest.py  test_config.py  test_proxy_requests.py
aws-proxy/tests/proxy/: test_apigateway.py  test_apigatewayv2.py  test_appsync.py  test_cloudwatch.py  test_cognito_idp.py  test_dynamodb.py  test_kinesis.py  test_kms.py  test_lambda.py  test_s3.py  test_secrets_manager.py  test_sns.py  test_sqs.py
aws-replicator/: MANIFEST.in  Makefile  README.md  pyproject.toml  setup.cfg
aws-replicator/aws_replicator/: __init__.py  auth_proxy.py  aws_request_forwarder.py  cli.py  config.py  extension.py  replicate.py  resource_types.json  server.py  service_states.py
aws-replicator/aws_replicator/client/: auth_proxy.py  cli.py  http2_server.py  replicate.py  service_states.py  utils.py
aws-replicator/aws_replicator/server/: aws_request_forwarder.py  extension.py  request_handler.py  resource_replicator.py
aws-replicator/aws_replicator/shared/: constants.py  models.py  utils.py
aws-replicator/example/: Makefile  README.md  lambda.py  main.tf
aws-replicator/tests/: conftest.py  test_config.py  test_extension.py  test_proxy_requests.py
cockroachdb/: README.md  pyproject.toml
cockroachdb/localstack_cockroachdb/: extension.py
cockroachdb/tests/: test_extension.py
diagnosis-viewer/: Makefile  README.md  setup.cfg
diagnosis-viewer/diagnosis_viewer/: __init__.py  extension.py
hello-world/: Makefile  README.md  pyproject.toml  setup.cfg
hello-world/helloworld/: __init__.py  extension.py
httpbin/: Makefile  README.md  pyproject.toml  setup.cfg
httpbin/localstack_httpbin/: __init__.py  extension.py  server.py
keycloak/: .gitignore  Makefile  README.md  pyproject.toml
keycloak/localstack_keycloak/: __init__.py  extension.py  utils.py
keycloak/quickstart/: README.md  sample-realm.json
keycloak/sample-app/: README.md
keycloak/sample-app/cdk/: app.py  cdk.json
keycloak/tests/: test_extension.py
localai/: Makefile  README.md  pyproject.toml  setup.cfg
localai/localai/: __init__.py  extension.py  server.py
mailhog/: Makefile  README.md  pyproject.toml  setup.cfg
mailhog/mailhog/: __init__.py  extension.py  package.py  server.py
miniflare/: LICENSE  Makefile  README.md  setup.cfg
miniflare/example/: package-lock.json  package.json  wrangler.toml
miniflare/example-aws/: index.js  package-lock.json  package.json  run.sh  wrangler.toml
miniflare/example/src/: index.ts
miniflare/miniflare/: cloudflare_api.py  config.py  extension.py
openai/: Makefile  README.md  pyproject.toml  setup.cfg  setup.py
openai/localstack_openai/: extension.py  mock_openai.py
openai/tests/: test_api.py  tests.py
paradedb/: .gitignore  Makefile  README.md  pyproject.toml
paradedb/localstack_paradedb/: __init__.py  extension.py
paradedb/localstack_paradedb/utils/: docker.py
paradedb/sample-movie-search/: .gitignore  Makefile  README.md  cdk.json  idea.md  package-lock.json  package.json  tsconfig.json
paradedb/sample-movie-search/data/: movies.json
paradedb/sample-movie-search/lambda/: index.ts  package-lock.json  package.json
paradedb/sample-movie-search/lib/: movie-search-stack.ts
paradedb/sample-movie-search/web/: index.html  script.js  style.css
paradedb/tests/: test_extension.py
prometheus/: Makefile  README.md  pyproject.toml  setup.cfg
prometheus/docs/: event_analysis.md  localstack_metrics.md  system_metrics.md
prometheus/localstack_prometheus/: __init__.py  config.py  expose.py  extension.py  handler.py
prometheus/localstack_prometheus/instruments/: dynamodb_local.py  lambda_.py  patch.py  poller.py  sender.py  sqs_poller.py  stream_poller.py
prometheus/localstack_prometheus/jmx_exporter/: package.py
prometheus/localstack_prometheus/metrics/: core.py  event_polling.py  event_processing.py  lambda_.py
prometheus/prometheus/: expose.py  extension.py  handler.py  server.py
prometheus/prometheus/instruments/: __init__.py  patch.py  poller.py  sender.py  sqs_poller.py  stream_poller.py  util.py
prometheus/prometheus/metrics/: common.py  core.py  event_polling.py  event_processing.py
prowler/: Makefile  README.md  pyproject.toml
prowler/backend/localstack_prowler/: extension.py  (+1 more)
prowler/frontend/: package-lock.json  package.json  tsconfig.json
prowler/tests/: test_extension.py
stripe/: Makefile  README.md  pyproject.toml  setup.cfg  setup.py
stripe/localstack_stripe/: extension.py  localstripe.py
terraform-init/: Makefile  README.md  setup.cfg
terraform-init/localstack_terraform_init/: __init__.py  extension.py  packages.py
typedb/: Makefile  README.md  pyproject.toml
typedb/localstack_typedb/: __init__.py  extension.py
typedb/tests/: test_extension.py
utils/: Makefile  README.md  pyproject.toml
utils/localstack_extensions/: __init__.py
utils/localstack_extensions_utils/: __init__.py  docker.py
utils/proto/: grpcbin.proto  hello.proto
utils/tests/: __init__.py  conftest.py
vault/: .gitignore  Makefile  README.md  pyproject.toml
vault/localstack_vault/: __init__.py  extension.py
vault/sample-app-extension/: .gitignore  Makefile  README.md
vault/tests/: test_extension.py
wiremock/: .gitignore  Makefile  README.md  pyproject.toml
wiremock/localstack_wiremock/: __init__.py  extension.py
wiremock/sample-app/: main.tf
wiremock/sample-app-oss/: main.tf  stubs.json
wiremock/sample-app-runner/: .gitignore  README.md  cdk.json  jest.config.js  package-lock.json  package.json  tsconfig.json
(+129 files in other folders)
