# general build configuration
[build-system]
requires = ['setuptools>65', 'wheel', 'plux>=1.10', "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "localstack-extension-aws-proxy"
readme = "README.md"
version = "0.2.1"
description = "LocalStack extension that emulates the Snowflake API"
authors = [
        { name = "LocalStack Team", email = "info@localstack.cloud"}
]

dependencies = [
    "localstack"
]

[project.optional-dependencies]
test=[
    # Note: Currently requires a version pin, to avoid assertion errors (missing
    # `BucketARN` response property) TODO: to be fixed in a future iteration!
    "boto3==1.40.55",
    # couple of dependencies required to import localstack test tools
    "localstack-core[base-runtime]>4.9",
    "moto-ext",
    "quart",
    # pytest and other test utils
    "hypercorn",
    "pytest",
    "pytest-httpserver",
    "ruff",
    # build tools
    "setuptools",
    "setuptools_scm",
    "wheel"
]


[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["aws_proxy*"]

[tool.setuptools.package-data]
"*" = [
    "**/*.html",
    "**/*.js",
    "**/*.png"
]
