[metadata]
name = localstack-extension-aws-proxy
version = 0.2.1
summary = LocalStack AWS Cloud Proxy
description = Proxy AWS resources into your LocalStack instance
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/localstack/localstack-extensions/tree/main/aws-proxy
author = LocalStack Team
author_email = info@localstack.cloud

[options]
zip_safe = False
packages = find:
install_requires =
    # TODO: currently requires a version pin, see note in auth_proxy.py
    boto3>=1.26.151
    # TODO: currently requires a version pin, see note in auth_proxy.py
    botocore>=1.29.151
    flask
    localstack-client
    xmltodict
    # TODO: refactor the use of http2_server
    hypercorn
    h11
    quart
    # TODO: runtime dependencies below should be removed over time (required for some LS imports)
    boto
    cbor2
    flask-cors
    jsonpatch
    moto
    werkzeug

[options.extras_require]
test =
    apispec
    localstack-core
    localstack-ext
    openapi-spec-validator
    pyproject-flake8
    pytest
    pytest-httpserver
    rolo

[options.package_data]
aws_proxy =
    **/*.html
    **/*.js
    **/*.png

[options.entry_points]
localstack.extensions =
    aws-proxy = aws_proxy.server.extension:AwsProxyExtension
localstack.plugins.cli =
    aws-proxy = aws_proxy.client.cli:AwsProxyPlugin
