[metadata]
name = localstack-extension-aws-replicator
version = 0.0.1
description = Replicate AWS resources into your LocalStack instance
url = https://github.com/localstack/localstack-extensions/tree/main/aws-replicator
author = LocalStack Team
author_email = info@localstack.cloud

[options]
zip_safe = False
packages = find:
install_requires =
    flask
    localstack>=1.0.0
    xmltodict
    # TODO: runtime dependencies below should be removed over time (required for some LS imports)
    boto
    cbor2
    flask-cors
    h11
    jsonpatch
    moto
    quart
    werkzeug

[options.entry_points]
localstack.extensions =
    aws-replicator = aws_replicator.server.extension:AwsReplicatorExtension
localstack.plugins.cli =
    aws-replicator = aws_replicator.client.cli:AwsReplicatorPlugin
