[metadata]
name = localstack-extension-aws-replicator
version = 0.1.1
summary = LocalStack Extension: AWS replicator
description = Replicate AWS resources into your LocalStack instance
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/localstack/localstack-extensions/tree/main/aws-replicator
author = LocalStack Team
author_email = info@localstack.cloud

[options]
zip_safe = False
packages = find:
install_requires =
    # TODO: currently requires a version pin, see note in auth_proxy.py
    boto3>=1.26.151
    # TODO: currently requires a version pin, see note in auth_proxy.py
    botocore>=1.29.151
    flask
    localstack
    localstack-client
    localstack-ext
    xmltodict
    # TODO: runtime dependencies below should be removed over time (required for some LS imports)
    boto
    cbor2
    flask-cors
    h11
    jsonpatch
    moto
    quart
    werkzeug

[options.extras_require]
test =
    apispec
    openapi-spec-validator
    pyproject-flake8
    pytest
    pytest-httpserver

[options.package_data]
aws_replicator =
    **/*.html
    **/*.js
    **/*.png

[options.entry_points]
localstack.extensions =
    aws-replicator = aws_replicator.server.extension:AwsReplicatorExtension
localstack.plugins.cli =
    aws-replicator = aws_replicator.client.cli:AwsReplicatorPlugin
