[metadata]
name = diagnosis-viewer
version = 0.1.0
url = https://github.com/localstack/diagnosis-viewer
author = LocalStack Contributors
author_email = info@localstack.cloud
description = View the diagnostics endpoint directly in localstack
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8

[options]
zip_safe = False
packages = find:
install_requires =
    localstack>=1.4
    diapretty@git+https://github.com/silv-io/diapretty

[options.entry_points]
localstack.extensions =
    diagnosis-viewer = diagnosis_viewer.extension:DiagnosisViewerExtension
