[metadata]
name = localstack-extension-diagnosis-viewer
version = 0.1.0
url = https://github.com/localstack/localstack-extensions/tree/main/diagnosis-viewer
summary: LocalStack Extension: Diagnosis Viewer
author = LocalStack Contributors
author_email = info@localstack.cloud
description = View the diagnostics endpoint directly in localstack
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8

[options]
zip_safe = False
packages = find:
install_requires =
    localstack>=1.4
    diapretty

[options.entry_points]
localstack.extensions =
    diagnosis-viewer = diagnosis_viewer.extension:DiagnosisViewerExtension
