[metadata]
name = localstack-extension-hello-world
version = 0.0.1
description = LocalStack hello world extension Example
url = https://github.com/localstack/localstack-extensions/tree/main/hello-world
author = Thomas Rausch
author_email = thomas@localstack.cloud

[options]
zip_safe = False
packages = find:
install_requires =
    localstack>=0.14.4.dev

[options.entry_points]
localstack.extensions =
    hello-world = helloworld.extension:HelloWorldExtension
