[metadata]
name = localstack-extension-hello-world
version = 0.1.0
summary = LocalStack Extension: Hello World
description = A minimal LocalStack extension
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/localstack/localstack-extensions/tree/main/hello-world
author = Thomas Rausch
author_email = thomas@localstack.cloud

[options]
zip_safe = False
packages = find:

[options.extras_require]
dev =
    localstack-core>=1.0

[options.entry_points]
localstack.extensions =
    hello-world = helloworld.extension:HelloWorldExtension
