# LocalStack project configuration
[build-system]
requires = ['setuptools', 'wheel', 'plux>=1.3.3']
build-backend = "setuptools.build_meta"

[tool.black]
line_length = 100
include = '(localstack_httpbin/.*\.py$)'
extend_exclude = '(localstack_httpbin/vendor)'

[tool.isort]
profile = 'black'
line_length = 100
extend_skip = ['localstack_httpbin/vendor/']

# call using pflake8
[tool.flake8]
max-line-length = 110
ignore = 'E203,E266,E501,W503,F403'
select = 'B,C,E,F,I,W,T4,B9'
exclude = '.venv*,venv*,dist,*.egg-info,.git'
