[metadata]
name = localstack-extension-httpbin
version = 0.1.0
url = https://github.com/localstack/localstack-extensions/tree/main/httpbin
author = LocalStack
author_email = info@localstack.cloud
summary = LocalStack Extension: httpbin
description = A simple HTTP Request & Response Service directly in LocalStack
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8

[options]
zip_safe = False
packages = find:
install_requires =
    localstack>=2.2
    # requirements for vendored httpbin
    Flask
    MarkupSafe
    decorator
    itsdangerous
    brotlipy
    raven[flask]
    gevent
    flasgger

[options.entry_points]
localstack.extensions =
    httpbin = localstack_httpbin.extension:HttpbinExtension
