[metadata]
name = localstack-localai-extension
version = 0.1.0
url = https://github.com/localstack/localstack-localai-extension
author = LocalStack
author_email = info@localstack.cloud
description = LocalAI directly in localstack
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8

[options]
zip_safe = False
packages = find:
install_requires =
    localstack>=2.2

[options.entry_points]
localstack.extensions =
    localstack-localai-extension = localai.extension:LocalAIExtension
