[metadata]
name = localstack-extension-mailhog
version = 0.1.0
url = https://github.com/localstack/localstack-extensions/tree/main/mailhog
author = LocalStack
author_email = info@localstack.cloud
summary: LocalStack Extension: MailHog
description = Web and API based SMTP testing directly in LocalStack using MailHog
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8

[options]
zip_safe = False
packages = find:
install_requires =
    localstack>=2.2

[options.entry_points]
localstack.extensions =
    mailhog = mailhog.extension:MailHogExtension
