[metadata]
name = localstack-extension-miniflare
version = 0.1.0
description = Extension to run Miniflare on LocalStack
url = https://github.com/localstack/localstack-extensions/tree/main/hello-world
author = Waldemar Hummer
author_email = waldemar@localstack.cloud

[options]
zip_safe = False
packages = find:
install_requires =
    localstack>=1.0.0

[options.entry_points]
localstack.extensions =
    miniflare = miniflare.extension:MiniflareExtension
