[metadata]
name = localstack-extension-openai
version = attr: localstack_openai.__version__
url = https://github.com/localstack/localstack-extensions/tree/main/openai
author = Cristopher Pinzon
author_email = cristopher.pinzon@localstack.cloud
summary = LocalStack Extension: OpenAI
description = OpenAI extension for LocalStack
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
license = Apache License 2.0
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries
    Topic :: Utilities

[options]
zip_safe = False
packages = find:
install_requires =
    faker>=8.12.1
    plux>=1.3
    rolo>=0.3
test_requires =
    openai>=0.10.2,<1.0
    pytest>=6.2.4

[options.extras_require]
dev =
    localstack-core>=3.1
    openai>=0.10.2,<1.0
    pytest>=6.2.4
    black==22.3.0
    isort==5.10.1

[options.packages.find]
exclude =
    tests*

[options.package_data]
* = *.md

[options.entry_points]
localstack.extensions =
    localstack_openai = localstack_openai.extension:LocalstackOpenAIExtension