[build-system]
requires = ["setuptools", 'wheel', 'plux>=1.3.1']
build-backend = "setuptools.build_meta"

[project]
name = "localstack-extension-prometheus-metrics"
version = "0.1.0"
description = "LocalStack Extension: Prometheus Metrics"
readme = {file = "README.md", content-type = "text/markdown; charset=UTF-8"}
requires-python = ">=3.9"
license = {text = "Apache License 2.0"}
authors = [
    { name = "Greg Furman", email = "greg.furman@localstack.cloud" }
]
keywords = ["localstack", "localstack-extension", "extension", "prometheus", "metrics"]
classifiers = []
dependencies = [
    "prometheus-client (>=0.21.1,<0.22.0)",
    "localstack-core (>=4.2.0,<5.0.0)",
]

[project.urls]
Homepage = "https://github.com/localstack/localstack-extensions/tree/main/prometheus/README.md"

[project.optional-dependencies]
dev = [
    "localstack>=0.0.0.dev"
]

[tool.black]
line_length = 100
include = '(prometheus/.*\.py$)'

[tool.isort]
profile = 'black'
line_length = 100

# call using pflake8
[tool.flake8]
max-line-length = 110
ignore = 'E203,E266,E501,W503,F403'
select = 'B,C,E,F,I,W,T4,B9'
exclude = '.venv*,venv*,dist,*.egg-info,.git'

[project.entry-points."localstack.extensions"]
localstack_prometheus = "localstack_prometheus.extension:PrometheusMetricsExtension"
