[metadata]
name = localstack-extension-prometheus-metrics
version = 0.1.0
url = https://github.com/localstack/localstack-extensions/tree/main/prometheus
author = Greg Furman
author_email = greg.furman@localstack.cloud
summary = LocalStack Extension: Prometheus Metrics
description = Prometheus Metrics extension for LocalStack
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8

license = Apache License 2.0
keywords = localstack, localstack-extension, extension, prometheus, metrics

[options]
zip_safe = False
packages = find:
python_requires = >=3.9
install_requires =
    prometheus-client>=0.21.1,<0.22.0
    localstack-core>=4.2.0,<5.0.0

[options.extras_require]
dev =
    localstack>=0.0.0.dev

[options.entry_points]
localstack.extensions =
    localstack_prometheus = localstack_prometheus.extension:PrometheusMetricsExtension