[build-system]
requires = ["setuptools", "wheel", "plux>=1.3.1"]
build-backend = "setuptools.build_meta"

[project]
name = "localstack-prowler"
version = "0.1.0"
description = "LocalStack Extension: Prowler Security Scanner"
readme = {file = "README.md", content-type = "text/markdown; charset=UTF-8"}
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    { name = "HarshCasper", email = "erbeusgriffincasper@gmail.com" }
]
keywords = ["localstack", "localstack-extension", "prowler", "security"]
dependencies = [
    "docker>=7.0",
]

[project.optional-dependencies]
dev = [
    "localstack>=0.0.0.dev",
    "pytest>=7.0",
    "boto3>=1.34",
    "requests>=2.31",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.entry-points."localstack.extensions"]
prowler = "localstack_prowler.extension:ProwlerExtension"

[tool.setuptools]
package-dir = {"" = "backend"}

[tool.setuptools.packages.find]
where = ["backend"]

[tool.setuptools.package-data]
"localstack_prowler" = ["static/*", "static/**/*"]
