[metadata]
name = localstack-extensions-stripe
version = attr: localstack_stripe.__version__
url = https://github.com/localstack/localstack-extensions/tree/main/stripe
author = Thomas Rausch
author_email = thomas@localstack.cloud
description = Stripe extension for LocalStack
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
license = Apache License 2.0
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries
    Topic :: Utilities

[options]
zip_safe = False
packages = find:
setup_requires =
    setuptools
    wheel
    plux>=1.3
install_requires =
    stevedore>=3.4
    plux>=1.3
    localstack>=0.14.4.dev
    localstripe>=1.13
test_requires =
    pytest>=6.2.4

[options.extras_require]
dev =
    pytest>=6.2.4
    black==22.3.
    isort==5.10.1

[options.packages.find]
exclude =
    tests*

[options.package_data]
* = *.md
