[metadata]
name = localstack-extension-terraform-init
version = 0.2.0
summary = LocalStack Extension: LocalStack Terraform Init
url = https://github.com/localstack/localstack-extensions/tree/main/terraform-init
author = Thomas Rausch
author_email = thomas@localstack.cloud
description = LocalStack Extension for using Terraform files in init hooks
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8

[options]
zip_safe = False
packages = find:
install_requires =
    plux

[options.extras_require]
dev =
    localstack-core>=3.4

[options.entry_points]
localstack.extensions =
    localstack-terraform-init = localstack_terraform_init.extension:TflocalInitExtension
localstack.init.runner=
    tflocal = localstack_terraform_init.extension:TflocalScriptRunner
