[build-system]
requires = ["setuptools", "wheel", "plux>=1.3.1"]
build-backend = "setuptools.build_meta"

[project]
name = "localstack-extensions-utils"
version = "0.1.0"
description = "Utility library for LocalStack Extensions"
readme = {file = "README.md", content-type = "text/markdown; charset=UTF-8"}
requires-python = ">=3.10"
authors = [
    { name = "LocalStack Team" }
]
keywords = ["LocalStack", "Extensions", "Utils"]
classifiers = []
dependencies = [
    "h2",
    "hpack",
    "httpx",
    "hyperframe",
    "priority",
    "requests",
    "rolo",
    "twisted",
]

[project.urls]
Homepage = "https://github.com/localstack/localstack-extensions"

[project.optional-dependencies]
dev = [
    "boto3",
    "build",
    "jsonpatch",
    "localstack",
    "pytest",
    "ruff",
]
test = [
    "grpcio>=1.60.0",
    "grpcio-tools>=1.60.0",
    "jsonpatch",
    "localstack",
    "pytest>=7.0",
    "pytest-timeout>=2.0",
]

[tool.setuptools.packages.find]
include = ["localstack_extensions*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]
