[build-system]
requires = ["setuptools", "wheel", "plux>=1.3.1"]
build-backend = "setuptools.build_meta"

[project]
name = "localstack-wiremock"
version = "0.1.0"
description = "WireMock Extension for LocalStack"
readme = {file = "README.md", content-type = "text/markdown; charset=UTF-8"}
requires-python = ">=3.9"
authors = [
    { name = "LocalStack + WireMock team"}
]
keywords = ["LocalStack", "WireMock"]
classifiers = []
dependencies = [
    "priority",
    "localstack-extensions-utils @ git+https://github.com/localstack/localstack-extensions.git@fix/tcp-only-base-class#egg=localstack-extensions-utils&subdirectory=utils"
]

[project.urls]
Homepage = "https://github.com/localstack/localstack-extensions/tree/main/wiremock"

[project.optional-dependencies]
dev = [
    "boto3",
    "build",
    "jsonpatch",
    "localstack",
    "pytest",
    "rolo",
    "ruff",
    "twisted"
]

[project.entry-points."localstack.extensions"]
localstack-wiremock = "localstack_wiremock.extension:WireMockExtension"
