[metadata]
name = {{ cookiecutter.project_slug }}
version = {{ cookiecutter.version }}
summary = LocalStack Extension: {{ cookiecutter.project_name }}
url = https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}
author = {{ cookiecutter.full_name }}
author_email = {{ cookiecutter.email }}
description = {{ cookiecutter.project_short_description }}
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8

[options]
zip_safe = False
packages = find:
install_requires =
    localstack>=2.2
    localstack-core
    localstack-ext
    werkzeug
    flask
    rolo
    
[options.entry_points]
localstack.extensions =
    {{ cookiecutter.project_slug }} = {{ cookiecutter.module_name }}.extension:MyExtension

[options.package_data]
{{ cookiecutter.project_slug }} = 
    {{ cookiecutter.module_name }}/frontend/build/*.html
    {{ cookiecutter.module_name }}/frontend/build/*.js
    {{ cookiecutter.module_name }}/frontend/build/*.js.map
    {{ cookiecutter.module_name }}/frontend/build/*.png
    {{ cookiecutter.module_name }}/frontend/build/*.css
    {{ cookiecutter.module_name }}/frontend/build/*.css.map
    {{ cookiecutter.module_name }}/frontend/build/*.json
